<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p17"
    android:padding="10dp"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarFadeDuration="5000"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/secondLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/courgetteregular"
                    android:gravity="center"
                    android:text="@string/order_title"
                    android:textColor="@color/light_blue"
                    android:textSize="25sp" />

                <RadioGroup

                    android:id="@+id/groupradio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/mini_burger"
                        android:layout_width="0dp"
                        android:layout_height="99dp"
                        android:layout_weight="1"
                        android:background="@drawable/h1"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/courgetteregular"
                        android:gravity="bottom|center"
                        android:padding="10dp"
                        android:text="@string/mini_pizza_hint"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/big_burger"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:background="@drawable/h1"
                        android:button="@android:color/transparent"
                        android:fontFamily="@font/courgetteregular"
                        android:gravity="bottom|center"
                        android:padding="10dp"
                        android:text="@string/big_pizza_hint"
                        android:textSize="18sp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/numOfTops"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/text_field_background"
                        android:fontFamily="@font/courgetteregular"
                        android:gravity="center"
                        android:hint="@string/amount_tops_hint"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:padding="10dp"
                        android:textAlignment="gravity"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/okBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="@android:color/holo_orange_light"
                        android:text="@android:string/ok"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/spinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:orientation="vertical"></LinearLayout>


            <LinearLayout
                android:id="@+id/checkbox_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:gravity="start"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chips_extra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/courgetteregular"
                        android:onClick="selectItem"
                        android:text="@string/extraChips_hint"
                        app:buttonTint="@android:color/holo_orange_dark" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/chips" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/onionRings_extra"
                        android:layout_width="191dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/courgetteregular"
                        android:onClick="selectItem"
                        android:text="@string/extreOnionRings_hint"
                        app:buttonTint="@android:color/holo_orange_dark"></CheckBox>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/onionrings" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ketchup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/courgetteregular"
                        android:onClick="selectItem"
                        android:saveEnabled="true"
                        android:text="@string/ketchup_hint"
                        app:buttonTint="#FF9800"></CheckBox>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ketchup" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/mayo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/courgetteregular"
                        android:onClick="selectItem"
                        android:text="@string/mayo_hint"
                        app:buttonTint="#FF9800"></CheckBox>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/mayo" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/priceToPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/courgetteregular"
                android:text="@string/current_price"
                android:textColor="@color/purple_700"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderTotalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/courgetteregular"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/purple_700"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/courgetteregular"
                android:text="@string/del_pick_rb_hint"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/delivery_pickup_RB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/deliveryRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgetteregular"
                    android:gravity="start"
                    android:text="@string/delivery_btn_hint" />

                <RadioButton
                    android:id="@+id/selfpickupRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgetteregular"
                    android:gravity="start"
                    android:text="@string/selfPickup_hint" />
            </RadioGroup>

            <EditText
                android:id="@+id/addressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/text_field_background"
                android:fontFamily="@font/courgetteregular"
                android:hint="@string/address_hint"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/fullNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_field_background"
                android:fontFamily="@font/courgetteregular"
                android:hint="@string/fullName_hint"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_field_background"
                android:fontFamily="@font/courgetteregular"
                android:hint="@string/PhoneNumberHint"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/submitbtn_hint"
                android:textColor="@android:color/holo_orange_dark" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
